<resources>
    <string name="left">back</string>
    <string name="right">Complete</string>
    <string name="draft">Draft</string>
    <string name="sure">OK</string>
    <string name="next_step">Next</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="select_media_hint">Please select media!</string>
    <string name="app_name">rdVEDemo</string>
    <string name="preview_error">preview error，please retry！</string>
    <string name="no_media">no media</string>
    <string name="video_not_found">no video</string>
    <string name="photo_not_found">no picture</string>
    <string name="wait">wait...</string>
    <string name="empty">" "</string>
    <string name="priview_title">preview</string>
    <string name="video_edit">Video Edit</string>
    <string name="more_orientation">proportion</string>
    <string name="orientation_title">proportion</string>
    <string name="orientation_1_1">1:1</string>
    <string name="orientation_landscape">landscape</string>
    <string name="orientation_portrait">portrait</string>
    <string name="orientation_auto">auto</string>
    <string name="proportion_ori">original</string>
    <string name="proportion_1x1">1:1</string>
    <string name="proportion_16x9">16:9</string>
    <string name="proportion_9x16">9:16</string>
    <string name="proportion_4x3">4:3</string>
    <string name="proportion_3x4">3:4</string>
    <string name="addmenu_addimage">Add picture</string>
    <string name="addmenu_addvideo">Add video</string>
    <string name="addmenu_addtext">Add text</string>
    <string name="addmenu_transition">Transition</string>
    <string name="transition_default">Use random transition</string>
    <string name="filter_apply_to_all">Apply to all media</string>
    <string name="transition_apply_to_all">Apply to all transition</string>
    <string name="select_camera_photo">Takephoto</string>
    <string name="select_camera_video">Record</string>
    <string name="videoVoice">Original</string>
    <string name="edit_click_split">Click split</string>
    <string name="subtitle_progress_default">0.0</string>
    <string name="click_dash_line_to_edit">Click on the dotted box to edit</string>
    <string name="import_duration_limit">Video duration cannot be greater than %ds</string>
    <string name="not_support_cup_arch">Current feature is temporarily unavailable</string>
    <string name="select_media_title_video">Video</string>
    <string name="select_media_title_photo">Picture</string>
    <string name="import_info" formatted="false">Video:%d,Picture:%d</string>
    <string name="import_info_video_only" formatted="false">Video:%d</string>
    <string name="import_info_photo_only" formatted="false">Picture:%d</string>
    <string name="continue_txt">Continue</string>
    <string name="voice">Sound</string>
    <string name="advanced_edit">Advance edit</string>
    <string name="preview_spilt">Split</string>
    <string name="preview_rotate">Rotate</string>
    <string name="preview_mirror">Mirror</string>
    <string name="preview_crop">Crop</string>
    <string name="preview_speed">Speed</string>
    <string name="preview_copy">Copy</string>
    <string name="preview_reverse">Reverse</string>
    <string name="preview_del">Delete</string>
    <string name="preview_sort">Clips order</string>
    <string name="preview_trim">Trim</string>
    <string name="preview_picture_duration">Picture duration</string>
    <string name="preview_edit_pic">Rotate&amp;Crop</string>
    <string name="preview_text">Text</string>
    <string name="release_hand_for_del">Release to delete</string>
    <string name="drag_into_trash_del">Drag into the trash to delete</string>
    <string name="music">Music</string>
    <string name="volume">Volume</string>
    <string name="sound_effect">VoiceFX</string>
    <string name="audio">Dubbing</string>
    <string name="music_many">Multi-track</string>
    <string name="subtitle">Subtitle</string>
    <string name="sticker">Sticker</string>
    <string name="effect">Effect</string>
    <string name="mosaic">Mosaic</string>
    <string name="dewatermark">Dewatermark</string>
    <string name="sound">Sound</string>
    <string name="filter">Filter</string>
    <string name="ani_type_zoom_out">ImageAnim</string>
    <string name="zoom_out_switch">EnableAnimation(Only Image)</string>
    <string name="background">Background</string>
    <string name="no_background_mode">NoBackground</string>
    <string name="blur">Blur</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="cover">Cover</string>
    <string name="graffiti">Graffiti</string>
    <string name="mv">MV</string>
    <string name="collage">Collage</string>
    <string name="temp">Template</string>
    <string name="zishuo">Zishuo</string>
    <string name="transition">Transition</string>
    <string name="partedit">Clip edit </string>
    <string name="theme">Theme</string>
    <string name="export">Export</string>
    <string name="addanim">Add anim</string>
    <string name="clearanim">Clear anim</string>
    <string name="add_subtitle">Add subtitle</string>
    <string name="add_sticker">Add sticker</string>
    <string name="sticker_edit">Edit sticker</string>
    <string name="edit_subtitle">Edit subtitle</string>
    <string name="subtitle_style">Style</string>
    <string name="subtitle_font_style">Font</string>
    <string name="subtitle_color">Color</string>
    <string name="bg_color">BG</string>
    <string name="subtitle_size">Size</string>
    <string name="subtitle_anim">Animation</string>
    <string name="subtitle_stroke">Stroke</string>
    <string name="subtitle_align">Align</string>
    <string name="none">none</string>
    <string name="music_none">None</string>
    <string name="video_voice_n">Original on</string>
    <string name="video_voice_p">Original off</string>
    <string name="local">Local</string>
    <string name="local_video">Local video</string>
    <string name="music_yun">Cloud</string>
    <string name="complete">Complete</string>
    <string name="crop_mirror_reset">Restore</string>
    <string name="cover_head">The opening</string>
    <string name="cover_tail">Until the end</string>
    <string name="cover_prompt_add_image">Please add an image</string>
    <string name="trim_construct">Construct</string>
    <string name="trim_cut_off">Cut off</string>
    <string name="zishuo_style">Style</string>
    <string name="zishuo_rotate_text">Rotate text</string>
    <string name="zishuo_horizontal_text">Horizontal text</string>
    <string name="zishuo_vertical_text">Vertical text</string>
    <string name="zishuo_inscription_library">Inscription library</string>
    <string name="zishuo_custom_inscription">Custom inscription</string>
    <string name="zishuo_inscription_detail">Inscription detail</string>
    <string name="zishuo_import">Import</string>
    <string name="zishuo_delete">delete</string>
    <string name="zishuo_speed_very_slow">Very slow</string>
    <string name="zishuo_speed_slow">Slow</string>
    <string name="zishuo_speed_standard">Standard</string>
    <string name="zishuo_speed_fast">Fast</string>
    <string name="zishuo_speed_very_fast">Very fast</string>
    <string name="zishuo_input_hint">Write down what you want to say. (Different sentences are used, the reading effect is different)</string>
    <string name="zishuo_audition">Audition</string>
    <string name="zishuo_text_transform_voice">Text-to-speech</string>
    <string name="zishuo_voice_transform_text">3 minutes</string>
    <string name="zishuo_more_anim">More animation</string>
    <string name="zishuo_stroke">Stroke</string>
    <string name="zishuo_inscription">Use</string>
    <string name="st_style_apply_to_all">Apply style to all subtitles</string>
    <string name="st_color_apply_to_all">Apply color to all subtitles</string>
    <string name="st_anim_apply_to_all">Apply animation to all subtitles</string>
    <string name="st_stroke_apply_to_all">Apply stroke to all subtitles</string>
    <string name="st_font_apply_to_all">Apply font to all subtitles</string>
    <string name="st_size_apply_to_all">Apply size to all subtitles</string>
    <string name="st_position_apply_to_all">Apply position to all subtitles</string>
    <string name="subtitle_effect_edit">Adjust</string>
    <string name="text_style_bold">Bold</string>
    <string name="text_style_italic">Italic</string>
    <string name="text_style_shadow">Shadow</string>
    <string name="subtitle_size_large">Big</string>
    <string name="subtitle_size_small">Small</string>
    <string name="subtitle_alpha">Alpha</string>
    <string name="subtitle_seekbar_stroke">Stroke : </string>
    <string name="subtitle_thin">Thin</string>
    <string name="subtitle_wide">Thick</string>
    <string name="show_style_item_recovery">Fade in</string>
    <string name="show_style_item_flash_white">Flash white</string>
    <string name="show_style_item_flash_black">Flash black</string>
    <string name="show_style_item_to_left">Push left</string>
    <string name="show_style_item_to_right">Push right</string>
    <string name="show_style_item_to_up">Push up</string>
    <string name="show_style_item_to_down">Push down</string>
    <string name="transition_default_duration">1.0S</string>
    <string name="audio_tip">Press for dubbing begin，release to end</string>
    <string name="audio_press">Press for dubbing</string>
    <string name="audio_remove_tip">Press for delete current dubbing part</string>
    <string name="audio_reset">Retry</string>
    <string name="audio_audition">Audit</string>
    <string name="photo_duration">Duration</string>
    <string name="del">Delete</string>
    <string name="et_subtitle_ttf">Select font</string>
    <string name="split_duration_less_than">The split duration cannot be less than %.1f seconds</string>
    <string name="please_check_network">please check the network!</string>
    <string name="last_split_cannt_del">Keep one video segment at least</string>
    <string name="record_no_external_storage">No memory card or memory card is not loaded！</string>
    <string name="livecamera_record_cannot_start">Start recording failed！</string>
    <string name="livecamera_record_switch_filter_failed">Switch filter failed！</string>
    <string name="exit_black_screen">Double click to exit the black screen</string>
    <string name="activity_label_sightseeing_file">Select a folder or file</string>
    <string name="scan_media">Scanning</string>
    <string name="scan_video">Scanning video</string>
    <string name="mymusic">Mine</string>
    <string name="localmusic">Local</string>
    <string name="histroymusic">Recently</string>
    <string name="download_more_music">Down more music</string>
    <string name="music_history_delete">Delete recent use</string>
    <string name="activity_label_select_music">Select Music</string>
    <string name="activity_label_effect_music">Select Effect</string>
    <string name="select_medias">select media</string>
    <string name="downloading">Downloading resources, please wait...</string>
    <string name="download_error">unable to download...</string>
    <string name="default_ttf"> Default font</string>
    <string name="isloading">Loading....</string>
    <string name="isDrafting">Being deposited in draft box....</string>
    <string name="addsub_video_head_failed">Theme header cannot add subtitle!</string>
    <string name="addsub_video_end_failed">Subtitle cannot be added at the end of the theme!</string>
    <string name="addsub_video_between_failed">duration is too short to add captions!</string>
    <string name="addsticker_video_head_failed">Theme header cannot add sticker!</string>
    <string name="ae_media_info">The video template needs:</string>
    <string name="one_key_make">One key production</string>
    <string name="ae_enable_repeat">Enable Repeat</string>
</resources>