<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/edit_video_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/edit_menu_bg"
        android:gravity="center_vertical"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEditorGroups"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/sub_menu_bgcolor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:id="@+id/hsvBottomMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scrollbars="none"
            android:visibility="visible">

            <RadioGroup
                android:id="@+id/edit_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_theme"
                    style="@style/edit_menu"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/edit_video_ment_item_marginLeft"
                    android:drawableTop="@drawable/edit_theme"
                    android:text="@string/theme"
                    android:visibility="gone"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_mv"
                    style="@style/edit_menu"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="@dimen/edit_video_ment_item_marginLeft"
                    android:drawableTop="@drawable/rb_mv"
                    android:text="@string/mv"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_music"
                    style="@style/edit_menu"
                    android:layout_marginLeft="0dp"
                    android:drawableTop="@drawable/edit_music"
                    android:text="@string/music"/>


                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_audio"
                    style="@style/edit_menu"
                    android:drawableTop="@drawable/edit_rb_audio"
                    android:text="@string/audio"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_word"
                    style="@style/edit_menu"
                    android:drawableTop="@drawable/edit_word"
                    android:text="@string/subtitle"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_filter"
                    style="@style/edit_menu"
                    android:drawableTop="@drawable/edit_filter"
                    android:text="@string/filter"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_special"
                    style="@style/edit_menu"
                    android:drawableTop="@drawable/edit_special"
                    android:text="@string/special"/>

                <com.rd.lib.ui.ExtRadioButton
                    android:id="@+id/rb_partedit"
                    style="@style/edit_menu"
                    android:layout_marginLeft="10dp"
                    android:drawableTop="@drawable/edit_partedit"
                    android:text="@string/partedit"/>

            </RadioGroup>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>